--- a/Day-1/class/L-2.html
+++ b/Day-1/class/L-2.html
@@ -1,8 +1,8 @@
-<html >
+<html lang="en">
 <head>
     <title>Excellent-study-center</title>
 </head>
 <body>
     <P>HELLO WORLD</P>
 </body>
-</html>
+</htm>
