--- a/Day-2/test section/test.html
+++ b/Day-2/test section/test.html
@@ -9,11 +9,11 @@
     Create a simple protfolio like this 
     <h1>Prince Kumar</h1>
     <br>
-    <p>Hello EveryOne My Name is prince kumar</p>
-    <p>I'm a web developer</p>
+    <p><b>Hello EveryOne My Name is prince kumar</b></p>
+    <p><i>I'm a Web developer</i></p>
     <img src="assets/Photo.jpg" alt="Photo">
     <br><hr>
-    <a href="study.html">Study</a>
+    <a href="study.html"><u>Study</u></a>
     <br><hr>
     <a href="Experience.html">Experience</a>
 </body>
