Day-4 almost complete

--- a/Day-3/classes/L-1.html
+++ b/Day-3/classes/L-1.html
@@ -22,6 +22,6 @@
     <footer>
         <h3>Contact Me : 844XXXXX01</h3>
         <h3>Gmail : Excellent-Study-Center@gmail.com</h3>
-    </footer>
+    </footer> navbar
 </body>
 </html>
