--- a/Day-3/classes/L-3.html
+++ b/Day-3/classes/L-3.html
@@ -10,10 +10,11 @@
         <pre>
             <!-- Revisiting Anchor Tag -->
             <!--  target="_main" :- for new tab -->
-            <a href="L-1.html" target="_main">Home</a>    <a href="L-2.html" target="_main">Menu</a>
+            <a href="https://www.amazon.com/" target="_main">Home</a>    <a href="L-2.html" target="_main">Menu</a>
             <!-- <img src="assets/Photo.jpg" alt="Photo"> :- clickable pic -->
             <a href="L-1.html"><img src="assets/Photo.jpg" alt="Photo"></a>
+            <a href="https://www.amazon.com/"><img src="assets/Photo.jpg" alt="Photo1"></a>
         </pre>
-    </header>
+    </header> 
 </body>
 </html>
