test section add

--- a/Day-3/classes/L-1.html
+++ b/Day-3/classes/L-1.html
@@ -9,19 +9,19 @@
     <!-- Page Layout Techniques -->
     <!-- Using Semantic tags for layout  -->
     <!-- Using the right Tags  -->
-    <header>
-        <pre>
-            <p>Home    Menu    Course    Contact</p>
-        </pre>
-    </header>
-    <main>
-        <h1>This is a Main content Area </h1>
-        <h2>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorum deleniti reiciendis fugiat architecto accusantium consectetur ab consequatur.
-            Commodi culpa odit ea suscipit maiores veritatis aspernatur, praesentium reprehenderit ullam dolorem iusto?</h2>
-    </main>
-    <footer>
-        <h3>Contact Me : 844XXXXX01</h3>
-        <h3>Gmail : Excellent-Study-Center@gmail.com</h3>
-    </footer> navbar
+<header>
+    <pre>
+        <p>Home    Menu    Course    Contact</p>
+    </pre>
+</header>
+<main>
+    <h1>This is a Main content Area </h1>
+    <h2>Lorem ipsum dolor sit amet, consectetur
+    Commodi culpa </h2>
+</main>
+<footer>
+    <h3>Contact Me : 844XXXXX01</h3>
+    <h3>Gmail : Excellent-Study-Center@gmail.com</h3>
+</footer>
 </body>
 </html>
